--- a/index.html
+++ b/index.html
@@ -1162,7 +1162,7 @@
                         </div>
                         <div class="contact-text">
                             <h3>Location</h3>
-                            <p>123 Health Avenue, Medical District, City</p>
+                            <p>561/1/1 Madiwala road,Thalawathugoda</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -1171,7 +1171,8 @@
                         </div>
                         <div class="contact-text">
                             <h3>Phone</h3>
-                            <a href="tel:+1234567890">(123) 456-7890</a>
+                            <a href="tel:+94778540201">077 854 0201</a>
+                            <a href="tel:+94704304595">070 4304595</a>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -1180,7 +1181,7 @@
                         </div>
                         <div class="contact-text">
                             <h3>Email</h3>
-                            <a href="mailto:info@loyalcare.com">info@loyalcare.com</a>
+                            <a href="mailto:info@loyalcare.com">loyalhomenursingcare@gmail.com</a>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -1189,14 +1190,14 @@
                         </div>
                         <div class="contact-text">
                             <h3>WhatsApp</h3>
-                            <a href="https://wa.me/94787411299" target="_blank">+94 78 741 1299</a>
+                            <a href="https://wa.me/94778540201" target="_blank">077 854 0201</a>
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=61577707857128&mibextid=ZbWKwL" class="social-link"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.tiktok.com/@loyal.home.nursing" class="social-link"><i class="fab fa-tiktok"></i></a>
                     </div>
                 </div>
                 <div class="contact-form">
@@ -1252,13 +1253,13 @@
                 </div>
                 <div class="footer-contact">
                     <h3>Contact Info</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> 123 Health Avenue, City</p>
-                    <p><i class="fas fa-phone"></i> (123) 456-7890</p>
-                    <p><i class="fas fa-envelope"></i> info@loyalcare.com</p>
+                    <p><i class="fas fa-map-marker-alt"></i>561/1/1 Madiwala road,Thalawathugoda</p>
+                    <p><i class="fas fa-phone"></i>077 854 0201</p>
+                    <p><i class="fas fa-envelope"></i> loyalhomenursingcare@gmail.com</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Loyal Care. All Rights Reserved.</p>
+                <p>&copy; 2025 Loyal Care. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
