--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,7 @@
                         </div>
                         <div class="contact-text">
                             <h3>Phone</h3>
-                            <a href="tel:+94778540201">077 854 0201</a>
+                            <a href="tel:+94778540201">077 854 0201</a><br>
                             <a href="tel:+94704304595">070 4304595</a>
                         </div>
                     </div>
