--- a/index.html
+++ b/index.html
@@ -1197,7 +1197,7 @@
                         <a href="https://www.facebook.com/profile.php?id=61577707857128&mibextid=ZbWKwL" class="social-link"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.tiktok.com/@loyal.home.nursing" class="social-link"><i class="fab fa-tiktok"></i></a>
+                        <a href="https://www.tiktok.com/@loyal.home.nursin" class="social-link"><i class="fab fa-tiktok"></i></a>
                     </div>
                 </div>
                 <div class="contact-form">
