--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Loyal Care - Premium Home Healthcare Services. Compassionate care for seniors, post-operative support, palliative care, and disability support.">
     <meta name="keywords" content="home healthcare, elderly care, nursing, post-operative care, palliative care, disability support">
     <title>Loyal Care - Premium Home Healthcare</title>
+    <link rel="icon" type="image/jpeg" href="logo.jpg" style="border-radius:50%;">
     
     <!-- Preconnect to external domains for better performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -81,10 +82,11 @@
             margin-right: 10px;
         }
 
-        .logo-text {
+        .logo-text a {
             font-size: 1.5rem;
             font-weight: 700;
             color: var(--primary-purple);
+            text-decoration: none;
         }
 
         .nav-links {
@@ -1010,9 +1012,9 @@
             <nav>
                 <div class="logo">
                     <div class="logo-icon">
-                        <i class="fas fa-heartbeat"></i>
+                        <img src="logo-removebg-preview.png" alt="logo" style="width: 32px; height: auto;">
                     </div>
-                    <div class="logo-text">Loyal Care</div>
+                    <div class="logo-text"><a href="#home">Loyal Care</a></div>
                 </div>
                 <div class="mobile-menu-btn">
                     <i class="fas fa-bars"></i>
@@ -1259,7 +1261,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Loyal Care. All Rights Reserved.</p>
+                <p>&copy; 2025 Loyal Care. All Rights Reserved. | Made with <span style="color: #e25555;">&#10084;&#65039;</span> by <a href="https://harshalakshitha.me/" style="text-decoration: none; color: #ffffff;">Harsha</a></p>
             </div>
         </div>
     </footer>
