--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Loyal Care - Premium Home Healthcare Services. Compassionate care for seniors, post-operative support, palliative care, and disability support.">
     <meta name="keywords" content="home healthcare, elderly care, nursing, post-operative care, palliative care, disability support">
     <title>Loyal Care - Premium Home Healthcare</title>
-    <link rel="icon" type="image/jpeg" href="logo.jpg" style="border-radius:50%;">
+    <link rel="icon" type="image/png" href="logo.png" style="border-radius:50%;">
     
     <!-- Preconnect to external domains for better performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
