--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,7 @@
                         </div>
                         <div class="contact-text">
                             <h3>Email</h3>
-                            <a href="mailto:info@loyalcare.com">loyalhomenursingcare@gmail.com</a>
+                            <a href="mailto:loyalhomenursingcare@gmail.com">loyalhomenursingcare@gmail.com</a>
                         </div>
                     </div>
                     <div class="contact-item">
