--- a/index.html
+++ b/index.html
@@ -1225,7 +1225,7 @@
                 </div>
             </div>
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.927049152582!2d79.86124331480038!3d6.927078995000492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2595d6e0e2e7d%3A0x7b7b7b7b7b7b7b7b!2sColombo%2C%20Sri%20Lanka!5e0!3m2!1sen!2slk!4v1717420000000!5m2!1sen!2slk" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.6!2d79.931131!3d6.8759693!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2509779d3d40d%3A0x4a9bc646b19431a2!2sJayarathna%20Motor%20House%2C%20Ruhunupura!5e0!3m2!1sen!2slk!4v1737663200000!5m2!1sen!2slk" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
